--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="page">
         <header class="header">
-        <a href="/" class="header-link"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
+        <a href="/" class="main-header-link"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
                 <li class="header-item"><a href="" class="header-link1">Студия</a></li>
@@ -55,7 +55,7 @@
             </ul>
         </section>
         <section>
-            <h2 class="work-what">Чем мы занимаемся</h2>
+            <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="about-work">
                 <li class="about-list"> <img src="./images/box1.jpg" alt="work on tablet" width="370" height="294" /></li>
                 <li class="about-list"> <img src="./images/box2.jpg" alt="work on PC" width="370" height="294" /></li>
@@ -63,7 +63,7 @@
             </ul>
         </section>
         <section class="about-us">
-            <h2>Наша команда</h2>
+            <h2 class="section-title">Наша команда</h2>
             <ul class="about1">
                 <li class="about1-link">
                     <img src="./images/img.jpg" alt="product designer" width="270" height="260" />
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer class="contacts">
-        <a href="/" class="adress-list"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
+        <a href="/" class="main-header-link"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
         <address>
             <ul class="adress">
     <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т Леси
