--- a/portfolio.html
+++ b/portfolio.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-link"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
+        <a href="/" class="main-header-link"><span style="color:#2196F3;">Web</span><span style="color:#212121;">Studio</span></a>
         <nav class="header-nav">
             <ul class="header-list">
-                <li class="header-item"><a href="./index.html" class="header-link2">Студия</a></li>
-                <li class="header-item"><a href="" class="header-link3">Портфолио</a></li>
-                <li class="header-item"><a href="" class="header-link2">Контакты</a></li>
+                <li class="header-item"><a href="./index.html" class="header-link">Студия</a></li>
+                <li class="header-item"><a href="" class="current">Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-link">Контакты</a></li>
             </ul>
         </nav>
         <ul>
@@ -39,54 +39,54 @@
         <ul class="about2">
             <li class="about2-link">
                 <img src="./images/img4.jpg" alt="product designer" width="370" height="294" />
-                <h2>Технокряк</h2>
+                <h2 class="car-title">Технокряк</h2>
                 <p class="about">Веб-сайт</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img5.jpg" alt="Frontend Developer" width="370" height="294" />
-                <h2>Постер New Orlean vs Golden Star</h2>
+                <h2 class="car-title">Постер New Orlean vs Golden Star</h2>
                 <p class="about">Дизайн</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img6.jpg" alt="Marketing" width="370" height="294" />
-                <h2>Ресторан Seafood</h2>
+                <h2 class="car-title">Ресторан Seafood</h2>
                 <p class="about">Приложение</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img7.jpg" alt="UI Designer" width="370" height="294" />
-                <h3>Проект Prime</h3>
+                <h2 class="car-title">Проект Prime</h2>
                 <p class="about">Маркетинг</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img8.jpg" alt="UI Designer" width="370" height="294" />
-                <h2>Проект Boxes</h2>
+                <h2 class="car-title">Проект Boxes</h2>
                 <p class="about">Приложение</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img9.jpg" alt="UI Designer" width="370" height="294" />
-                <h2>Inspiration has no Borders</h2>
+                <h2 class="car-title">Inspiration has no Borders</h2>
                 <p class="about">Веб-сайт</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img10.jpg" alt="UI Designer" width="370" height="294" />
-                <h2>Издание Limited Edition</h2>
+                <h2 class="car-title">Издание Limited Edition</h2>
                 <p class="about">Дизайн</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img11.jpg" alt="UI Designer" width="370" height="294" />
-                <h2>Проект LAB</h2>
+                <h2 class="car-title">Проект LAB</h2>
                 <p class="about">Маркетинг</p>
             </li>
             <li class="about2-link">
                 <img src="./images/img12.jpg" alt="UI Designer" width="370" height="294" />
-                <h2>Growing Business</h2>
+                <h2 class="car-title">Growing Business</h2>
                 <p class="about">Приложение</p>
             </li>
         </ul>
     </section>
     </main>
     <footer class="contacts">
-        <a href="/" class="adress-list"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
+        <a href="/" class="main-header-link"><span style="color:#2196F3;">Web</span><span style="color:#FFFFFF;">Studio</span></a>
         <address class="adress">
             <ul class="adress">
                 <li class="adress-item"> <a class="adress-link" href="https://goo.gl/maps/g7qsjHx3iKjqyc236">г. Киев, пр-т
